kubernetes/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
  name: solar-system
  namespace: _{_NAMESPACE_}_
spec:
  rules:
    - host: solar-system._{_INGRESS_IP_}_.nip.io
      http:
        paths:
          - backend:
              service:
                name: solar-system
                port:
                  number: 3000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - solar-system._{_INGRESS_IP_}_.nip.io
      secretName: ingress-local-tls
